--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <img class="img-fluid" src="./images/bg-1.png" alt="self-care">
+                <img class="img-fluid" src="./assets/bg-1.png" alt="self-care">
             </div>
 
             <div class="col-6">
-                <img class="img-fluid" src="" alt="dog-breeds">
+                <img class="img-fluid" src="./assets/Photos-dogs/Untitled design.png" alt="dog-breeds">
             </div>
         </div>
     </div>
