--- a/jasmine/tip1.html
+++ b/jasmine/tip1.html
@@ -21,12 +21,19 @@
                 <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
                     veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
                     qui tempora. Tempora, ipsa.</h3>
-                    <br>
+                <br>
                 <h6>Image Description: A woman hiking in the mountains.</h6>
-
-                <img class="navBtn" src="../assets/icons/icon-back.png" alt="backBtn">
-                <img class="navBtn" src="../assets/icons/icon-home.png" alt="homeBtn">
-                <img class="navBtn" src="../assets/icons/icon-next.png" alt="nextBtn">
+                <br>
+                <div class="navRow">
+                    <div class="navRow row">
+                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-back.png" alt="backBtn">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-home.png" alt="homeBtn">
+                        </div>
+                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn">
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="col-6">
