--- a/andrea/page1.html
+++ b/andrea/page1.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <h2>1. Get Moving</h2>
+                <h2>1. DOG BREED </h2>
                 <br>
                 <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
                     veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
@@ -31,14 +31,13 @@
                         <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-home.png" alt="homeBtn">
                         </div>
                         <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn">
-                            
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="col-6">
-                <img class="img-fluid" src="../assets/jasmineTop10Images/1.png" alt="tip1">
+                <img class="img-fluid" src="#" alt="breedName">
             </div>
 
 
