--- a/andrea/page1.html
+++ b/andrea/page1.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
+    
 </head>
 
 
@@ -16,13 +17,15 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <h2>1. DOG BREED </h2>
+                <h2>1. Pug </h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3>
+                   Pugs stand apart from other dog breeds not just because of their unique appearance, but with
+                    their silly attitude too. Generally described as "clowns," Pugs charm their humans with their
+                    playful sense of humor. Yet, behind their silliness hides a dog that is fiercely loyal and ancient
+                    in origin.</h3>
                 <br>
-                <h6>Image Description: A woman hiking in the mountains.</h6>
+                <h6>Image Description: A pug looking at the camera.</h6>
                 <br>
                 <div class="navRow">
                     <div class="navRow row">
@@ -37,15 +40,12 @@
             </div>
 
             <div class="col-6">
-                <img class="img-fluid" src="#" alt="breedName">
+                <img src="../assets/Photos-dogs/pug2.jpeg"  alt="A pug looking at the camera">
             </div>
 
 
         </div>
     </div>
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
