uploaded new pages

--- a/jasmine/tip3.html
+++ b/jasmine/tip3.html
@@ -15,14 +15,8 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-
-            <!-- BOX -->
             <div class="col-6">
-                <img class="img-fluid" src="../assets/jasmineTop10Images/2.png" alt="tip2">
-            </div>
-            <!-- BOX -->
-            <div class="col-6">
-                <h2>2. Nurture Relationships</h2>
+                <h2>3. Eat Well</h2>
                 <br>
                 <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
                     veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
@@ -30,19 +24,25 @@
                 <br>
                 <h6>Image Description: A woman hiking in the mountains.</h6>
                 <br>
-                <div class="navRow">
-                    <div class="navRow row">
-                        <div class="col-4"><a href="../jasmine/tip1.html"><img class="img-fluid" src="../assets/icons/icon-back.png" alt="backBtn"></a>
-                        </div>
-                        <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png" alt="homeBtn"></a>
-                        </div>
-                        <div class="col-4"><a href="../jasmine/tip3.html"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn"></a>
-                            
-                        </div>
+
+                <div class="row navRow">
+                    <div class="col-4"><a href="../jasmine/tip2.html"><img class="img-fluid"
+                                src="../assets/icons/icon-back.png" alt="backBtn"></a>
                     </div>
+                    <div class="col-4"><a href="../index.html"><img class="img-fluid"
+                                src="../assets/icons/icon-home.png" alt="homeBtn"></a>
+                    </div>
+                    <div class="col-4"><a href="../jasmine/tip4.html"><img class="img-fluid"
+                                src="../assets/icons/icon-next.png" alt="nextBtn"></a>
+
+                    </div>
+
                 </div>
             </div>
-            
+
+            <div class="col-6">
+                <img class="img-fluid" src="../assets/jasmineTop10Images/3.png" alt="tip3">
+            </div>
 
 
         </div>
