--- a/jasmine/tip4.html
+++ b/jasmine/tip4.html
@@ -18,11 +18,11 @@
 
             <!-- BOX -->
             <div class="col-6">
-                <img class="img-fluid" src="../assets/jasmineTop10Images/2.png" alt="tip2">
+                <img class="img-fluid" src="../assets/jasmineTop10Images/4.png" alt="tip4">
             </div>
             <!-- BOX -->
             <div class="col-6">
-                <h2>2. Nurture Relationships</h2>
+                <h2>4. Restore Gut Health</h2>
                 <br>
                 <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
                     veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
@@ -32,11 +32,11 @@
                 <br>
                 <div class="navRow">
                     <div class="navRow row">
-                        <div class="col-4"><a href="../jasmine/tip1.html"><img class="img-fluid" src="../assets/icons/icon-back.png" alt="backBtn"></a>
+                        <div class="col-4"><a href="../jasmine/tip3.html"><img class="img-fluid" src="../assets/icons/icon-back.png" alt="backBtn"></a>
                         </div>
                         <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png" alt="homeBtn"></a>
                         </div>
-                        <div class="col-4"><a href="../jasmine/tip3.html"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn"></a>
+                        <div class="col-4"><a href="../jasmine/tip5.html"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn"></a>
                             
                         </div>
                     </div>
