updated image descriptions

--- a/jasmine/tip2.html
+++ b/jasmine/tip2.html
@@ -28,7 +28,7 @@
                     veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
                     qui tempora. Tempora, ipsa.</h3>
                 <br>
-                <h6>Image Description: A woman hiking in the mountains.</h6>
+                <h6>Image Description: Two friends giving each other a bro-handshake.</h6>
                 <br>
                 <div class="navRow">
                     <div class="navRow row">
