--- a/jasmine/tip3.html
+++ b/jasmine/tip3.html
@@ -22,7 +22,7 @@
                     veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
                     qui tempora. Tempora, ipsa.</h3>
                 <br>
-                <h6>Image Description: A woman hiking in the mountains.</h6>
+                <h6>Image Description: Assorted fresh produce and legumes.</h6>
                 <br>
 
                 <div class="row navRow">
