updated page titles and text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Top Ten Lists</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
@@ -16,17 +16,6 @@
 
 
 <body>
-    <!-- Nav Bar -->
-    <!-- <nav class="navbar bg-black">
-        <div class="container-fluid">
-            <span class="navba">
-                JASMINE
-                HOME 
-                ANDREA
-            </span>
-        </div>
-    </nav> -->
-
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">TOP10S</a>
