--- a/jasmine/tip10.html
+++ b/jasmine/tip10.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -16,17 +16,15 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!-- BOX -->
+            <!-- BOX 1 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/10.png" alt="tip10">
             </div>
-            <!-- BOX -->
+            <!-- BOX 2 -->
             <div class="col-6">
                 <h2>10. Organize Finances</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> A far cry from a relaxing bubble bath but sometimes self-care is about doing the hard things that will make your life easier in the long run. Finances are one of the major causes of stress, particularly in relationships. Financial self-care is all about cultivating the kind of good habits that will help you feel calm and in control of your finances.</h3>
                 <br>
                 <h6>Image Description: A person working at their computer while using a calculator.</h6>
                 <br>
