--- a/jasmine/tip2.html
+++ b/jasmine/tip2.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -16,17 +16,15 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!-- BOX -->
+            <!-- BOX 1 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/2.png" alt="tip2">
             </div>
-            <!-- BOX -->
+            <!-- BOX 2 -->
             <div class="col-6">
                 <h2>2. Nurture Relationships</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> Life can get pretty hectic and busy, that's for sure. But making time to strengthen relationships with people we care for can bring many benefits to our sense of happiness and health. Making new friends can be challenging as an adult, but it is possible! You might try joining a club or association of like-minded people to find new connections. Whatever you decide, be sure to check-in with your established relationships, too.</h3>
                 <br>
                 <h6>Image Description: Two friends giving each other a bro-handshake.</h6>
                 <br>
