--- a/jasmine/tip5.html
+++ b/jasmine/tip5.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -15,14 +15,17 @@
 <body>
     <div class="container-fluid">
         <div class="row">
+            <!-- BOX 1 -->
             <div class="col-6">
                 <h2>5. Improve Sleep Health</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> Most adults need between 6 and 9 hours of sleep every night, but according to a recent survey, the
+                    average American gets just six hours and 19 minutes sleep a night. Keeping to a schedule will help
+                    your body settle into a routine, supporting your sleep-wake circadian rhythm for more restful and
+                    restorative sleep.</h3>
                 <br>
-                <h6>Image Description: An alarm clock on a nightstand with a person sleeping in bed at the very prudent hour of 8pm. ish.</h6>
+                <h6>Image Description: An alarm clock on a nightstand with a person sleeping in bed at the very prudent
+                    hour of 8pm. ish.</h6>
                 <br>
 
                 <div class="row navRow">
@@ -39,7 +42,7 @@
 
                 </div>
             </div>
-
+            <!-- BOX 2 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/5.png" alt="tip5">
             </div>
