--- a/jasmine/tip3.html
+++ b/jasmine/tip3.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -15,12 +15,11 @@
 <body>
     <div class="container-fluid">
         <div class="row">
+                        <!-- BOX 1 -->
             <div class="col-6">
                 <h2>3. Eat Well</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> Eating habits can be a major factor in how well you feel and how much you can enjoy your life. There’s no need to follow a specific dietary plan unless you have specific needs, just a healthy balanced diet that will give you the energy you need to live your life to the fullest.</h3>
                 <br>
                 <h6>Image Description: Assorted fresh produce and legumes.</h6>
                 <br>
@@ -39,7 +38,7 @@
 
                 </div>
             </div>
-
+            <!-- BOX 2 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/3.png" alt="tip3">
             </div>
