--- a/jasmine/tip4.html
+++ b/jasmine/tip4.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -16,17 +16,15 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!-- BOX -->
+            <!-- BOX 1 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/4.png" alt="tip4">
             </div>
-            <!-- BOX -->
+            <!-- BOX 2 -->
             <div class="col-6">
                 <h2>4. Restore Gut Health</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> The gut is home to a whopping 90% of your body's serotonin, also known as the “happy hormone”. Serotonin supports better sleep, digestion, and overall wellbeing. Including foods with natural or added probiotics, prebiotics, and plenty of fruits and vegetables will support your body with nutrients for a healthy microbiome.</h3>
                 <br>
                 <h6>Image Description: Assorted probiotics and juices.</h6>
                 <br>
