--- a/jasmine/tip6.html
+++ b/jasmine/tip6.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -16,17 +16,15 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!-- BOX -->
+            <!-- BOX 1 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/6.png" alt="tip6">
             </div>
-            <!-- BOX -->
+            <!-- BOX 2 -->
             <div class="col-6">
                 <h2>6. Make Time for Hobbies</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> Bringing more joy into your life will not only improve the quality of your life but may increase your lifespan too. Of course, it’s unrealistic to expect to be happy all of the time, but being sure to include things that make you feel joyful, however small, will increase your overall happiness levels. It could be as simple as calling a friend for a chat or finding a new hobby.</h3>
                 <br>
                 <h6>Image Description: A woman painting.</h6>
                 <br>
