--- a/jasmine/tip8.html
+++ b/jasmine/tip8.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -16,17 +16,15 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!-- BOX -->
+            <!-- BOX 1 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/8.png" alt="tip8">
             </div>
-            <!-- BOX -->
+            <!-- BOX 2 -->
             <div class="col-6">
                 <h2>8. Make a List</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> If you find yourself constantly juggling responsibilities and trying to remember all the things you need to do, you’re probably feeling the pressure of the mental load involved. Simply write a list of all the tasks to get organized and prioritize just three at a time. You’ll find a sense of achievement from ticking off the completed tasks.</h3>
                 <br>
                 <h6>Image Description: A notepad and pen with an empty To-Do list.</h6>
                 <br>
