--- a/jasmine/tip9.html
+++ b/jasmine/tip9.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Self-Care Tips</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
@@ -15,12 +15,11 @@
 <body>
     <div class="container-fluid">
         <div class="row">
+                        <!-- BOX 1 -->
             <div class="col-6">
                 <h2>9. De-clutter Spaces</h2>
                 <br>
-                <h3> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur unde expedita asperiores
-                    veniam deserunt, molestias atque sit vitae laboriosam eveniet. Eos tenetur culpa doloribus non sit
-                    qui tempora. Tempora, ipsa.</h3>
+                <h3> Did you know that clutter can impact your health, particularly your mental health? A disorganized and messy space can cause emotional stress and a rise in the stress hormone cortisol. Clutter is linked to more chronic stress and related adverse health conditions, so if your space is bumming you out, see how you feel after tidying up!</h3>
                 <br>
                 <h6>Image Description: Assorted empty container bins.</h6>
                 <br>
@@ -39,7 +38,7 @@
 
                 </div>
             </div>
-
+            <!-- BOX 2 -->
             <div class="col-6">
                 <img class="img-fluid" src="../assets/jasmineTop10Images/9.png" alt="tip9">
             </div>
