--- a/andrea/page1.html
+++ b/andrea/page1.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
-    
+
 </head>
 
 
@@ -20,7 +20,7 @@
                 <h2>1. Pug </h2>
                 <br>
                 <h3>
-                   Pugs stand apart from other dog breeds not just because of their unique appearance, but with
+                    Pugs stand apart from other dog breeds not just because of their unique appearance, but with
                     their silly attitude too. Generally described as "clowns," Pugs charm their humans with their
                     playful sense of humor. Yet, behind their silliness hides a dog that is fiercely loyal and ancient
                     in origin.</h3>
@@ -40,16 +40,35 @@
             </div>
 
             <div class="col-6">
-                <img src="../assets/Photos-dogs/pug2.jpeg"  alt="A pug looking at the camera">
+                <img src="../assets/Photos-dogs/pug101.webp" alt="A pug looking at the camera">
             </div>
 
 
         </div>
     </div>
 
+    <div class="navRow">
+        <div class="navRow row">
+            <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
+                        alt="backBtn"></a>
+            </div>
+            <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png"
+                        alt="homeBtn"></a>
+            </div>
+            <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid" src="../assets/icons/icon-next.png"
+                        alt="nextBtn"></a>
+
+            </div>
+        </div>
+    </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+
+
+
 </body>
 
 
