--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="col-6">
                 <div class="Tens"><p>10S</p> </div>
-                <img class="img-fluid" src="./assets/Photos-dogs/Untitled design.png" alt="dog-breeds">
+                <img class="img-fluid" src="./assets/Photos-dogs/TitlePage.png" alt="dog-breeds">
             </div>
         </div>
     </div>
