--- a/index.html
+++ b/index.html
@@ -16,24 +16,33 @@
 
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-white">
+
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-6">
-                <div class="Top"><p>TOP</p> </div>
-                <img class="img-fluid" src="./assets/bg-1.png" alt="self-care">
-
-            </div>
-
-            <div class="col-6">
-                <div class="Tens"><p>10S</p> </div>
-                <img class="img-fluid" src="./assets/Photos-dogs/TitlePage.png" alt="dog-breeds">
-            </div>
-        </div>
+      <a class="navbar-brand" href="#">TOP10S</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./jasmine/tip1.html">JASMINE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./andrea/page1.html">ANDREA</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 
 
+  <!-- BOX 1 -->
 
   <div class="container-fluid">
     <div class="row">
@@ -44,16 +53,16 @@
         <img class="img-fluid" src="./assets/bg-1.png" alt="self-care">
 
       </div>
-
+      <!-- BOX 2 -->
       <div class="col-6">
         <div class="Tens">
           <p>10S</p>
         </div>
-        <img class="img-fluid" src="./assets/Photos-dogs/Untitled design.png" alt="dog-breeds">
+        <img class="img-fluid" src="./assets/Photos-dogs/TitlePage.png" alt="dog-breeds">
       </div>
     </div>
   </div>
-
+  </nav>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
