--- a/andrea/page3.html
+++ b/andrea/page3.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="col-6">
-                <img src="../assets/Photos-dogs/pug101.webp" alt="A pug looking at the camera">
+                <img src=".." alt="A pug looking at the camera">
             </div>
 
 
