--- a/andrea/page4.html
+++ b/andrea/page4.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <style>
         @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
-      </style>
+    </style>
 </head>
 
 
@@ -21,25 +21,28 @@
 
             <!-- BOX -->
             <div class="col-6">
-                <img class="img-fluid" src="../assets/Photos-dogs/Untitled design.png" alt="red Aussie">
+                <img class="img-fluid" src="../assets/Photos-dogs/CORGI.png" alt="blue merle corgi">
             </div>
             <!-- BOX -->
             <div class="col-6">
                 <h2>4. Corgi </h2>
                 <br>
-                <h3>  sfiwfgoiwfoiwnf</h3>
+                <h3>
+                    The Pembroke Welsh Corgi is known as one of the most agreeable of small house dogs and is a loyal,
+                    loving pet for families. They also are known for their intelligence and enthusiasm for working. Many
+                    Pembrokes compete in dog sports, such as agility, herding, conformation, obedience, and more</h3>
                 <br>
-                <h6>Image Description: corgi.</h6>
+                <h6>Image Description: Blue corgi</h6>
                 <br>
                 <div class="navRow">
                     <div class="navRow row">
-                        <div class="col-4"><a href="../andrea/page1.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page3.html"><img class="img-fluid"
                                     src="../assets/icons/icon-back.png" alt="backBtn"></a>
                         </div>
                         <div class="col-4"><a href="../index.html"><img class="img-fluid"
                                     src="../assets/icons/icon-home.png" alt="homeBtn"></a>
                         </div>
-                        <div class="col-4"><a href="../andrea/page3.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page5.html"><img class="img-fluid"
                                     src="../assets/icons/icon-next.png" alt="nextBtn"></a>
                         </div>
                     </div>
@@ -48,7 +51,7 @@
         </div>
     </div>
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </body>
