--- a/andrea/page5.html
+++ b/andrea/page5.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <style>
         @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
-      </style>
+    </style>
 
 </head>
 
@@ -20,27 +20,22 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-6">
-                <h2>5. St Benard </h2>
+                <h2>5. St. Bernard </h2>
                 <br>
-                <h3>nwgeivhnwgvnslgvjnwsl
-                    </h3>
+                <h3>
+                </h3>
                 <br>
-                <h6>Image Description: buihgvosev</h6>
-                <br>
-                <div class="navRow">
-                    <div class="navRow row">
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-back.png" alt="backBtn">
-                        </div>
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-home.png" alt="homeBtn">
-                        </div>
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn">
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <h6>Image Description: St. Bernard and her puppies laying in the grass
 
+                </h6>
+                <br>
+
+            </div>
+            The St. Bernard didn't actually ever have a small barrel of brandy about its neck. They should be known as
+            the "dog rescuer," instead. Gaining their name from the dangerous St. Bernard pass in the Alps between Italy
+            and Switzerland, the breed was famous for rescuing people lost in the snow and in avalanches.
             <div class="col-6">
-                <img src="../assets/Photos-dogs/pug101.webp" alt="A pug looking at the camera">
+                <img src="../assets/Photos-dogs/BERANRD.png" alt="A pug looking at the camera">
             </div>
 
 
@@ -49,13 +44,13 @@
 
     <div class="navRow">
         <div class="navRow row">
-            <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
+            <div class="col-4"><a href="../andrea/page4.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
                         alt="backBtn"></a>
             </div>
             <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png"
                         alt="homeBtn"></a>
             </div>
-            <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid" src="../assets/icons/icon-next.png"
+            <div class="col-4"><a href="../andrea/page6.html"><img class="img-fluid" src="../assets/icons/icon-next.png"
                         alt="nextBtn"></a>
 
             </div>
