--- a/andrea/page6.html
+++ b/andrea/page6.html
@@ -21,25 +21,25 @@
 
             <!-- BOX -->
             <div class="col-6">
-                <img class="img-fluid" src="../assets/Photos-dogs/Untitled design.png" alt="red Aussie">
+                <img class="img-fluid" src="../assets/Photos-dogs/YORKIE.png" alt="red Aussie">
             </div>
             <!-- BOX -->
             <div class="col-6">
                 <h2>6. Yorkie</h2>
                 <br>
-                <h3> werogihnwergnerdg</h3>
+                <h3>They are favorites of urbanites the world over. Yorkies are long-lived and hypoallergenic (the coat is more like human hair than animal fur), and they make fine little watchdogs. This is a true 'personality breed,' providing years of laughs, love, and close companionship</h3>
                 <br>
-                <h6>Image Description: nwegonfweklngv</h6>
+                <h6>Image Description: Yorkie running in grass</h6>
                 <br>
                 <div class="navRow">
                     <div class="navRow row">
-                        <div class="col-4"><a href="../andrea/page1.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page5.html"><img class="img-fluid"
                                     src="../assets/icons/icon-back.png" alt="backBtn"></a>
                         </div>
                         <div class="col-4"><a href="../index.html"><img class="img-fluid"
                                     src="../assets/icons/icon-home.png" alt="homeBtn"></a>
                         </div>
-                        <div class="col-4"><a href="../andrea/page3.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page7.html"><img class="img-fluid"
                                     src="../assets/icons/icon-next.png" alt="nextBtn"></a>
                         </div>
                     </div>
