--- a/andrea/page7.html
+++ b/andrea/page7.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <style>
         @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
-      </style>
+    </style>
 
 </head>
 
@@ -23,24 +23,19 @@
                 <h2>7. Queensland heeler </h2>
                 <br>
                 <h3>
-                    ugnhkrsjbd</h3>
+
+                    Image result for queensland heeler facts
+                    The blue heeler is known as hard-working, intelligent, and loyal to its owner. Historically, these
+                    dogs were bred to work on farms as herders, and they still thrive when they have a job to do. Their
+                    fierce loyalty makes them even better workers</h3>
                 <br>
-                <h6>Image Description: weiorgnvd</h6>
+                <h6>Image Description: Queensland Heeler stand on a rock looking over  </h6>
                 <br>
-                <div class="navRow">
-                    <div class="navRow row">
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-back.png" alt="backBtn">
-                        </div>
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-home.png" alt="homeBtn">
-                        </div>
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn">
-                        </div>
-                    </div>
-                </div>
+
             </div>
 
             <div class="col-6">
-                <img src="../assets/Photos-dogs/pug101.webp" alt="A pug looking at the camera">
+                <img src="../assets/Photos-dogs/QUEENS.png" alt="Queensland Heeler stand on a rock looking over">
             </div>
 
 
@@ -49,13 +44,13 @@
 
     <div class="navRow">
         <div class="navRow row">
-            <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
+            <div class="col-4"><a href="../andrea/page6.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
                         alt="backBtn"></a>
             </div>
             <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png"
                         alt="homeBtn"></a>
             </div>
-            <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid" src="../assets/icons/icon-next.png"
+            <div class="col-4"><a href="../andrea/page8.html"><img class="img-fluid" src="../assets/icons/icon-next.png"
                         alt="nextBtn"></a>
 
             </div>
