--- a/andrea/page9.html
+++ b/andrea/page9.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <style>
         @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
-      </style>
+    </style>
 
 </head>
 
@@ -23,40 +23,32 @@
                 <h2>9. German Shepherd </h2>
                 <br>
                 <h3>
-                    drfbh.</h3>
+                    The German shepherd dog is a herding breed known for its courage, loyalty and guarding instincts. This breed
+            makes an excellent guard dog, police dog, military dog, guide dog for the blind and search and rescue dog.
+            For many families, the German shepherd is also a treasured family pet..</h3>
                 <br>
-                <h6>Image Description: erhb</h6>
+                <h6>Image Description: two german shepherds looking at camera with stic</h6>
                 <br>
-                <div class="navRow">
-                    <div class="navRow row">
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-back.png" alt="backBtn">
-                        </div>
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-home.png" alt="homeBtn">
-                        </div>
-                        <div class="col-4"><img class="img-fluid" src="../assets/icons/icon-next.png" alt="nextBtn">
-                        </div>
-                    </div>
-                </div>
+
             </div>
 
             <div class="col-6">
-                <img src="../assets/Photos-dogs/pug101.webp" alt="A pug looking at the camera">
+                <img src="../assets/Photos-dogs/GERMAN.png" alt=" two german shepherds looking at camera with stick ">
             </div>
-
-
+            
         </div>
     </div>
 
     <div class="navRow">
         <div class="navRow row">
-            <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
+            <div class="col-4"><a href="../andrea/page8.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
                         alt="backBtn"></a>
             </div>
             <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png"
                         alt="homeBtn"></a>
             </div>
-            <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid" src="../assets/icons/icon-next.png"
-                        alt="nextBtn"></a>
+            <div class="col-4"><a href="../andrea/page10.html"><img class="img-fluid"
+                        src="../assets/icons/icon-next.png" alt="nextBtn"></a>
 
             </div>
         </div>
