--- a/andrea/page10.html
+++ b/andrea/page10.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <style>
         @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
-      </style>
+    </style>
 </head>
 
 
@@ -21,25 +21,29 @@
 
             <!-- BOX -->
             <div class="col-6">
-                <img class="img-fluid" src="../assets/Photos-dogs/Untitled design.png" alt="red Aussie">
+                <img class="img-fluid" src="../assets/Photos-dogs/HUSKY.png" alt="Husky laying in fall leaves">
             </div>
             <!-- BOX -->
             <div class="col-6">
                 <h2>10.Husky</h2>
                 <br>
-                <h3>etrhnb. </h3>
+                <h3>
+                    Siberian huskies are probably best-known for their incredible sled-pulling skills, but these doggies
+                    aren't all business! Indeed, they make excellent working dogs, as they were bred originally to help
+                    the Chukchi people of Siberia hunt more efficiently. But they're sweet, friendly, and loyal cuddle
+                    bugs, too.</h3>
                 <br>
-                <h6>Image Description: eathn</h6>
+                <h6>Image Description: Husky laying in fall leaves </h6>
                 <br>
                 <div class="navRow">
                     <div class="navRow row">
-                        <div class="col-4"><a href="../andrea/page1.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page9.html"><img class="img-fluid"
                                     src="../assets/icons/icon-back.png" alt="backBtn"></a>
                         </div>
                         <div class="col-4"><a href="../index.html"><img class="img-fluid"
                                     src="../assets/icons/icon-home.png" alt="homeBtn"></a>
                         </div>
-                        <div class="col-4"><a href="../andrea/page3.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../index.html"><img class="img-fluid"
                                     src="../assets/icons/icon-next.png" alt="nextBtn"></a>
                         </div>
                     </div>
@@ -48,7 +52,7 @@
         </div>
     </div>
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </body>
