--- a/andrea/page8.html
+++ b/andrea/page8.html
@@ -21,25 +21,25 @@
 
             <!-- BOX -->
             <div class="col-6">
-                <img class="img-fluid" src="../assets/Photos-dogs/Untitled design.png" alt="red Aussie">
+                <img class="img-fluid" src="../assets/Photos-dogs/ROTTY.png" alt="Rottweilers standing in grass looking over">
             </div>
             <!-- BOX -->
             <div class="col-6">
                 <h2>8. Rottwelier</h2>
                 <br>
-                <h3> sjbvnswl </h3>
+                <h3> Rottweilers, also known affectionately as Rotties, are one of the most popular dogs in the United States. They are well known to be powerful, protective, and loyal, famous for their instinct for guarding. But Rottweilers are also easily trained, making them loyal, loving, and confident guardians </h3>
                 <br>
-                <h6>Image Description: rwjkgn</h6>
+                <h6>Image Description: Rottweilers standing in grass looking over </h6>
                 <br>
                 <div class="navRow">
                     <div class="navRow row">
-                        <div class="col-4"><a href="../andrea/page1.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page7.html"><img class="img-fluid"
                                     src="../assets/icons/icon-back.png" alt="backBtn"></a>
                         </div>
                         <div class="col-4"><a href="../index.html"><img class="img-fluid"
                                     src="../assets/icons/icon-home.png" alt="homeBtn"></a>
                         </div>
-                        <div class="col-4"><a href="../andrea/page3.html"><img class="img-fluid"
+                        <div class="col-4"><a href="../andrea/page9.html"><img class="img-fluid"
                                     src="../assets/icons/icon-next.png" alt="nextBtn"></a>
                         </div>
                     </div>
