updated index, corrected hero image

--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
       <div class="col-6">
         <div class="Top">
           <p>TOP</p>
-        </div>
-        <img class="img-fluid" src="./assets/bg-1.png" alt="self-care">
+        </div><a href="./jasmine/tip1.html">
+          <img class="bg" src="./assets/bg-1.png" alt="self-care"></a>
+          <div class="topic1"><p> Self-Care Tips </p></div>
 
       </div>
       <!-- BOX 2 -->
       <div class="col-6">
         <div class="Tens">
           <p>10S</p>
-        </div>
-        <img class="img-fluid" src="./assets/Photos-dogs/TitlePage.png" alt="dog-breeds">
+        </div><a href="./andrea/page1.html">
+          <img class="bg" src="./assets/Photos-dogs/TitlePage.png" alt="dog-breeds"></a>
+          <div class="topic2"><p> Dog Breeds </p></div>
       </div>
     </div>
   </div>
