--- a/jasmine/tip2.html
+++ b/jasmine/tip2.html
@@ -27,7 +27,7 @@
             <div class="col-6">
                 <h2>2. Nurture Relationships</h2>
                 <br>
-                <h3> Life can get pretty hectic and busy, that's for sure. But making time to strengthen relationships with people we care for can bring many benefits to our sense of happiness and health. Making new friends can be challenging as an adult, but it is possible! You might try joining a club or association of like-minded people to find new connections. Whatever you decide, be sure to check-in with your established relationships, too.</h3>
+                <h3> Making time to strengthen relationships with people we care for can bring many benefits to our sense of happiness and health. Making new friends can be challenging as an adult, but it is possible! You might try joining a club or association of like-minded people to find new connections. Whatever you decide, be sure to check-in with your established relationships, too.</h3>
                 <br>
                 <h6>Image Description: Two friends giving each other a bro-handshake.</h6>
                 <br>
