--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
 
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-black">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">TOP10S</a>
+      <a class="navbar-brand whiteText" href="#">TOP10S</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,13 +28,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
+            <a class="nav-link whiteText" aria-current="page" href="./index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./jasmine/tip1.html">JASMINE</a>
+            <a class="nav-link whiteText" href="./jasmine/tip1.html">JASMINE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./andrea/page1.html">ANDREA</a>
+            <a class="nav-link whiteText" href="./andrea/page1.html">ANDREA</a>
           </li>
         </ul>
       </div>
