--- a/andrea/page3.html
+++ b/andrea/page3.html
@@ -21,19 +21,19 @@
             <div class="col-6">
                 <h2>3. old english bulldog </h2>
                 <br>
-                <h3>
-                    old english.</h3>
+                <h3> Kind but courageous, friendly but dignified, the Bulldog is a thick-set, low-slung, well-muscled bruiser
+                    whose 'sourmug' face is the universal symbol of courage and tenacity. These docile, loyal companions
+                    adapt well to town or country</h3>
                 <br>
-                <h6>Image Description: A old english bulldog looking at the camera.</h6>
                 <br>
 
-                <div class="col-6">
-                    <img src="../assets/Photos-dogs/BULLY.png" alt="bulldog">
-                </div>
-                Kind but courageous, friendly but dignified, the Bulldog is a thick-set, low-slung, well-muscled bruiser
-                whose 'sourmug' face is the universal symbol of courage and tenacity. These docile, loyal companions
-                adapt well to town or country
+                
+
+                 <h6>Image Description: A old english bulldog looking at the camera.</h6>
             </div>
+            <div class="col-6">
+                    <img class="img-fluid" src="../assets/Photos-dogs/BULLY.png" alt="Bulldog">
+                </div>
         </div>
 
         <div class="navRow">
