--- a/andrea/page3.html
+++ b/andrea/page3.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Andreas Top Ten</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
@@ -21,19 +21,18 @@
             <div class="col-6">
                 <h2>3. old english bulldog </h2>
                 <br>
-                <h3> Kind but courageous, friendly but dignified, the Bulldog is a thick-set, low-slung, well-muscled bruiser
+                <h3> Kind but courageous, friendly but dignified, the Bulldog is a thick-set, low-slung, well-muscled
+                    bruiser
                     whose 'sourmug' face is the universal symbol of courage and tenacity. These docile, loyal companions
                     adapt well to town or country</h3>
                 <br>
                 <br>
 
-                
-
-                 <h6>Image Description: A old english bulldog looking at the camera.</h6>
+                <h6>Image Description: A old english bulldog looking at the camera.</h6>
             </div>
             <div class="col-6">
-                    <img class="img-fluid" src="../assets/Photos-dogs/BULLY.png" alt="Bulldog">
-                </div>
+                <img class="img-fluid" src="../assets/Photos-dogs/BULLY.png" alt="Bulldog">
+            </div>
         </div>
 
         <div class="navRow">
