--- a/andrea/page7.html
+++ b/andrea/page7.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Andreas Top Ten<title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
@@ -29,7 +29,7 @@
                     dogs were bred to work on farms as herders, and they still thrive when they have a job to do. Their
                     fierce loyalty makes them even better workers</h3>
                 <br>
-                <h6>Image Description: Queensland Heeler stand on a rock looking over  </h6>
+                <h6>Image Description: Queensland Heeler stand on a rock looking over </h6>
                 <br>
 
             </div>
