--- a/andrea/page8.html
+++ b/andrea/page8.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Andreas Top Ten</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <style>
         @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
-      </style>
+    </style>
 </head>
 
 
@@ -21,13 +21,17 @@
 
             <!-- BOX -->
             <div class="col-6">
-                <img class="img-fluid" src="../assets/Photos-dogs/ROTTY.png" alt="Rottweilers standing in grass looking over">
+                <img class="img-fluid" src="../assets/Photos-dogs/ROTTY.png"
+                    alt="Rottweilers standing in grass looking over">
             </div>
             <!-- BOX -->
             <div class="col-6">
                 <h2>8. Rottwelier</h2>
                 <br>
-                <h3> Rottweilers, also known affectionately as Rotties, are one of the most popular dogs in the United States. They are well known to be powerful, protective, and loyal, famous for their instinct for guarding. But Rottweilers are also easily trained, making them loyal, loving, and confident guardians </h3>
+                <h3> Rottweilers, also known affectionately as Rotties, are one of the most popular dogs in the United
+                    States. They are well known to be powerful, protective, and loyal, famous for their instinct for
+                    guarding. But Rottweilers are also easily trained, making them loyal, loving, and confident
+                    guardians </h3>
                 <br>
                 <h6>Image Description: Rottweilers standing in grass looking over </h6>
                 <br>
@@ -48,7 +52,7 @@
         </div>
     </div>
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </body>
