--- a/andrea/page9.html
+++ b/andrea/page9.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Andreas Top Ten</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
@@ -23,9 +23,11 @@
                 <h2>9. German Shepherd </h2>
                 <br>
                 <h3>
-                    The German shepherd dog is a herding breed known for its courage, loyalty and guarding instincts. This breed
-            makes an excellent guard dog, police dog, military dog, guide dog for the blind and search and rescue dog.
-            For many families, the German shepherd is also a treasured family pet..</h3>
+                    The German shepherd dog is a herding breed known for its courage, loyalty and guarding instincts.
+                    This breed
+                    makes an excellent guard dog, police dog, military dog, guide dog for the blind and search and
+                    rescue dog.
+                    For many families, the German shepherd is also a treasured family pet..</h3>
                 <br>
                 <h6>Image Description: two german shepherds looking at camera with stic</h6>
                 <br>
@@ -35,7 +37,7 @@
             <div class="col-6">
                 <img src="../assets/Photos-dogs/GERMAN.png" alt=" two german shepherds looking at camera with stick ">
             </div>
-            
+
         </div>
     </div>
 
