--- a/andrea/page3.html
+++ b/andrea/page3.html
@@ -29,28 +29,27 @@
                 <br>
 
                 <h6>Image Description: A old english bulldog looking at the camera.</h6>
-            </div>
-            <div class="col-6">
-                <img class="img-fluid" src="../assets/Photos-dogs/BULLY.png" alt="Bulldog">
-            </div>
-        </div>
 
-        <div class="navRow">
-            <div class="navRow row">
-                <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid"
-                            src="../assets/icons/icon-back.png" alt="backBtn"></a>
+                <div class="col-6">
+                    <img class="img-fluid" src="../assets/Photos-dogs/BULLY.png" alt="Bulldog">
                 </div>
-                <div class="col-4"><a href="../index.html"><img class="img-fluid" src="../assets/icons/icon-home.png"
-                            alt="homeBtn"></a>
-                </div>
-                <div class="col-4"><a href="../andrea/page4.html"><img class="img-fluid"
-                            src="../assets/icons/icon-next.png" alt="nextBtn"></a>
 
+                <div class="navRow">
+                    <div class="navRow row">
+                        <div class="col-4"><a href="../andrea/page2.html"><img class="img-fluid"
+                                    src="../assets/icons/icon-back.png" alt="backBtn"></a>
+                        </div>
+                        <div class="col-4"><a href="../index.html"><img class="img-fluid"
+                                    src="../assets/icons/icon-home.png" alt="homeBtn"></a>
+                        </div>
+                        <div class="col-4"><a href="../andrea/page4.html"><img class="img-fluid"
+                                    src="../assets/icons/icon-next.png" alt="nextBtn"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
