--- a/andrea/page7.html
+++ b/andrea/page7.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Andreas Top Ten<title>
+    <title>Andreas Top Ten</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <style>
         @import url(‘https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Inter:wght@500&display=swap’);
     </style>
@@ -39,9 +39,6 @@
             </div>
 
 
-        </div>
-    </div>
-
     <div class="navRow">
         <div class="navRow row">
             <div class="col-4"><a href="../andrea/page6.html"><img class="img-fluid" src="../assets/icons/icon-back.png"
@@ -56,6 +53,9 @@
             </div>
         </div>
     </div>
+    </div>
+
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
